--- a/platform_code/assessment/templates/assessment/organisation/member/remove-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/remove-member.html
@@ -3,7 +3,7 @@
 
 <div class="content-modal-remove-member">
     <div class="modal-header">
-        <h4 class="modal-title" >{% trans "Are you sure you want to remove the user from the organisation?" %} </h4>
+        <h4 class="modal-title" >{% trans "Are you sure you want to remove the user" %} {{member.user.email}} {% trans "from the organisation?" %} </h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
     </div>
     <div class="modal-body-delete">
