--- a/platform_code/assessment/templates/assessment/organisation/orga-evaluation.html
+++ b/platform_code/assessment/templates/assessment/organisation/orga-evaluation.html
@@ -58,7 +58,7 @@
                        href="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}"
                       >{% trans "Results" %}</a>
                     <!-- If the user is an admin of the organisation so he has the right to upgrade && evaluation finished && upgradable  -->
-                    {% if organisation|get_role:user == "admin" or organisation|get_role:user == "edit" %}
+                    {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor" %}
                       <a href="#" data-toggle="modal" data-target="#modal-upgrade-eval{{evaluation.id}}"
                          class="btn btn-primary medium-button margin-10"
                           >{% trans "Upgrade" %}</a>
@@ -74,7 +74,7 @@
                 {% else %}
                   <td class="case-array">
                     <!-- If the user is an organisation admin -->
-                    {% if organisation|get_role:user == "admin" or organisation|get_role:user == "edit" %}
+                    {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor" %}
                       <a href="#" data-toggle="modal" data-target="#modal-upgrade-eval{{evaluation.id}}"
                          class="btn btn-primary medium-button margin-10"
                           >{% trans "Upgrade" %}</a>
@@ -107,7 +107,7 @@
                        name="resultat-no-modif" href="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}"
                     >{% trans "Results" %}</a></td>
                 {% else %}
-                  {% if organisation|get_role:user == "admin" or organisation|get_role:user == "edit" %}
+                  {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor" %}
                     <td class="case-array"><a class="btn btn-modify medium-button" href="{{ evaluation.get_absolute_url}}"
                     >{% trans "Modify" %}</a></td>
                   {% else %}
@@ -119,7 +119,7 @@
               {% endif %}
 
               <td class="div-hidden-icons background-white" id="div-hidden-icons{{evaluation.id}}" >
-                  {% if organisation|get_role:user == "admin" or organisation|get_role:user == "edit" %}
+                  {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor" %}
                     <button class="btn btn-danger" data-toggle="modal" data-target="#modal-delete{{evaluation.id}}"><span class="fa fa-trash"></span></button>
                     <!-- The Modal delete evaluation -->
                     <!-- The modal is inside the for loop because we need to catch the evaluation id -->
