--- a/platform_code/assessment/templates/assessment/organisation/organisation.html
+++ b/platform_code/assessment/templates/assessment/organisation/organisation.html
@@ -68,7 +68,7 @@
         <input type="submit" value="{% trans 'Back to your dashboard' %}"
                class="btn btn-primary same-size-280 " />
     </form>
-    {% if organisation|get_role:user == "admin" or organisation|get_role:user == "edit"%}
+    {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor"%}
         {% if last_version %}
             <!-- Button to Open the Modal -->
             <button type="button" class="btn btn-primary float-right same-size-280 margin-auto"
