--- a/platform_code/assessment/templates/assessment/section.html
+++ b/platform_code/assessment/templates/assessment/section.html
@@ -58,8 +58,8 @@
         {% else %}
         <form action="{% url 'assessment:results' organisation.id evaluation.slug evaluation.id %}">
             <input type="submit" value="{% trans 'Validate and see the results' %}" disabled="true"
-                   alt="{% trans 'Please you have to finish the evaluation before it can be validated' %}"
-                   title="{% trans 'Please you have to finish the evaluation before it can be validated' %}"
+                   alt="{% trans 'Please finish the evaluation before validating it' %}"
+                   title="{% trans 'Please finish the evaluation before validating it' %}"
                    name="validation-button"
                    class="btn btn-primary float-right "/>
         </form>
