--- a/platform_code/assessment/templates/assessment/upgrade-banner.html
+++ b/platform_code/assessment/templates/assessment/upgrade-banner.html
@@ -3,7 +3,7 @@
 {% load home_tags %}
 
 <header role="banner" class="upgrade-banner margin-bot-top-20">{% trans "Your evaluation version is not up to date. Do you want to" %}
-    {% if evaluation.organisation|get_role:user == "admin" or evaluation.organisation|get_role:user == "edit" %}
+    {% if evaluation.organisation|get_role:user == "admin" or evaluation.organisation|get_role:user == "editor" %}
         <a href="#" data-toggle="modal" data-target="#modal-upgrade-eval{{evaluation.id}}"
         >{% trans " upgrade" %}</a>
     {% else %}
